--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   post_build:
     commands:
       - echo "Entered the post-build phase"
-      - mv target/deploy ./
+      - mv target/devops-api-test-0.0.1-SNAPSHOT.jar ./
 artifacts:
   files:
-    - deploy/*/
+    - devops-api-test-0.0.1-SNAPSHOT.jar
