--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
     commands:
       - echo "Inicializando la aplicación"
       - mvn package
-      - mvn sring-boot:run
+      - java -jar target/devops-api-test-0.0.1-SNAPSHOT.jar
 artifacts:
   files:
     - devops-api-test-0.0.1-SNAPSHOT.jar
