--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,22 +1,23 @@
 version: 0.2
+env:
+  variables:
+    JAVA_HOME: "/usr/lib/jvm/java-11-openjdk-amd64"
 phases:
-  pre_build:
+  install:
     commands:
-      - echo "Comenzando el pipeline en AWS"
+      - echo instalando maven...
+      - apt-get update -y
+      - apt-get install -y maven
   build:
     commands:
-      - echo "Construyendo JAR"
-      - mvn clean install
-  install:
-    runtime-versions:
-      java: corretto11
-  post_build:
-    commands:
-      - echo "Inicializando la aplicación"
-      - mvn package
-      - java -jar target/devops-api-test-0.0.1-SNAPSHOT.jar
+      - echo Building bice vida
+      - mvn install
 artifacts:
   files:
-    - devops-api-test-0.0.1-SNAPSHOT.jar
-    - .ebextensions/**/*
-    - deploy/**/*
+    - target/*.jar
+    - scripts/*.sh
+    - appspec.yml
+  discard-paths: yes
+cache:
+  paths:
+    - '/root/.m2/**/*'
